carbon: Fix Details link alignment when title is multiline

--- a/carbon/components/cards/ChartCard/styles.module.scss
+++ b/carbon/components/cards/ChartCard/styles.module.scss
@@ -32,8 +32,7 @@
 .cardHeader {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  align-items: center;
+  align-items: start;
   margin-bottom: 1.2rem;
 }
 
